--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --mode dev",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "prev": "vite prev",
+    "prev": "vite build --mode prev",
     "test": "vitest"
   },
   "dependencies": {
